[tool.poetry]
name = "diatonic-tools"
version = "0.1.0"
description = ""
authors = ["kureta <skureta@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
jupyterlab = "^4.2.3"
seaborn = "^0.13.2"
notebook = "^7.2.1"
scipy = "^1.14.0"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
